--- a/.drone.yml
+++ b/.drone.yml
@@ -1,54 +1,29 @@
+platform: linux/arm
+
 pipeline:
-
   docker-build:
-    image: plugins/docker:17.05
-    repo: quay.io/ipedrazas/drone-helm
-    tags: 
-      - ${DRONE_BRANCH}-${DRONE_COMMIT_SHA:0:7}
-      - k1.8.1-h2.7.0
-    registry: quay.io
-    email: "info@info.com"
-    secrets: [ docker_username, docker_password ]
-    when:
-      branch:
-        exclude: [ master]
-
-  docker-build-master:
-    image: plugins/docker:17.05
-    repo: quay.io/ipedrazas/drone-helm
+    image: plugins/docker:linux-arm
+    repo: justinbarrick/drone-helm
     tags: 
       - latest
       - k1.8.1-h2.7.0
       - ${DRONE_BRANCH}-${DRONE_COMMIT_SHA:0:7}
-    registry: quay.io
-    email: "info@info.com"
-    secrets: [ docker_username, docker_password ]
-    when:
-      branch: [master]
-
-  test_deploy:
-    image: quay.io/ipedrazas/drone-helm:latest
-    skip_tls_verify: true
-    chart: ./charts/plugintest
-    release: ${DRONE_BRANCH}
-    prefix: TEST
-    secrets: [ test_api_server, test_kubernetes_token]
+    secrets: [ DOCKER_USERNAME, DOCKER_PASSWORD ]
     when:
       branch: [master]
 
   slack:
-    image: plugins/slack
-    channel: deploys
-    username: drone
-    template: >
-      {{ build.author }} finished building  *<https://github.com/ipedrazas/{{ repo.name }}/{{ build.number }}|{{ build.branch }} ({{ build.number }})>* of {{ repo.name }}  with a {{ build.status }} status
-    secrets: ["slack_webhook"]
+    image: plugins/slack:linux-arm
+    webhook: https://hooks.slack.com/services/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
+    channel: kubernetes
+    when:
+      status: [success, failure]
 
 plugin:
-  name: drone-helm
+  name: drone-helm-arm
   desc: Execute helm to
   type: deploy
-  image: quay.io/ipedrazas/drone-helm
+  image: justinbarrick/drone-helm
   labels:
     - deploy
     - kubernetes
